Add col/row to cursor report. Add function set report. Add function set to lcd properties.

--- a/GenericHID/LUFA 100219/Demos/Device/ClassDriver/Joystick/Joystick.vcproj
+++ b/GenericHID/LUFA 100219/Demos/Device/ClassDriver/Joystick/Joystick.vcproj
@@ -316,15 +316,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\LUFA\Drivers\USB\Class\Device\HID.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\..\LUFA\Drivers\USB\Class\Common\HID.h"
 				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\LUFA\Drivers\USB\Class\HID.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\LUFA\Drivers\USB\Class\Device\HID.h"
 				>
 			</File>
 			<File
@@ -432,6 +432,10 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath=".\buildall.bat"
+			>
+		</File>
 		<File
 			RelativePath=".\makefile.generic16"
 			>
