add dummy .pro file for qtcreator

--- a/GenericHID/scripts/Makefile
+++ b/GenericHID/scripts/Makefile
@@ -5,12 +5,14 @@ generichid:	make_exe.sh
 	chmod a+x generichid
 
 .PHONY: install
-install:	generichid
+install:	generichid 99-generichid.rules
 	install -m 755 -p generichid $(INSTALLDIR_BIN)/
+	install -m 644 -p 99-generichid.rules $(INSTALLDIR_UDEVRULES)
 
 .PHONY: uninstall
 uninstall:
 	rm -f $(INSTALLDIR_BIN)/generichid
+	rm -f $(INSTALLDIR_UDEVRULES)/99-generichid.rules
 
 .PHONY: clean
 clean:
